--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 
     <!-- Navigation -->
     <nav class="navbar-expand-md navbar-light">
-      <a href="/"><img src="img/mainbanner.png" alt="DeviCat"></a>
+      <a href="/"><img src="img/newmainbanner.png" alt="DeviCat"></a>
 
       <div class="navbar-collapse">
         <ul class="navbar-nav ml-auto layout">
