--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ div ul{
 }
 
 .parallax { 
-  background-image: url("../img/jumbogroup.png");
+  background-image: url("../img/TakeRootAndDreamBanner.png");
   background-attachment: fixed;
   background-position: 0% 0%;
   background-repeat: no-repeat;
