Use semantic HTML for better ARIA compliance

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,8 +73,7 @@
     </script>
     {% endif %}
 
-  <div>
-    <div class="container raised">
+  <main class="container raised">
       {% if page.Character %}
       <h1>{{ page.Character }}</h1>
       {% if page.Subtitle %}<h1>({{ page.Subtitle }})</h1>{% endif %}
@@ -83,13 +82,10 @@
       </ul>
       {% endif %}
       {{ content }}
-    </div>
-  </div>
+  </main>
 
 <div id=fader></div>
 <div id="popup"><div><img src="https://static-cdn.jtvnw.net/emoticons/v1/819883/3.0" alt="[placeholder]"><div id="popup-caption"></div></div></div>
-
-
 
 
     <!-- Footer -->
