Flag the pop-down image as uninteresting to screenreaders

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@
   </main>
 
 <div id=fader></div>
-<div id="popup"><div><img src="https://static-cdn.jtvnw.net/emoticons/v1/819883/3.0" alt="[placeholder]"><div id="popup-caption"></div></div></div>
+<div id="popup"><div><img src="https://static-cdn.jtvnw.net/emoticons/v1/819883/3.0" alt="[placeholder]" role="presentation"><div id="popup-caption"></div></div></div>
 
 
     <!-- Footer -->
