Put more useful alt text on the button images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,8 +57,8 @@
       <div></div>
       <div id="twitch-embed"></div>
       <div>
-        <a href="https://www.patreon.com/devicatoutlet"> <img src="img/patreon.png" alt=""></a><br>
-        <a href="https://discord.gg/devicat"> <img src="img/discord.png" alt=""></a>
+        <a href="https://www.patreon.com/devicatoutlet"><img src="img/patreon.png" alt="Become a Patron"></a><br>
+        <a href="https://discord.gg/devicat"><img src="img/discord.png" alt="Join the discussion"></a>
       </div>
       <div></div>
     </section>
