--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ main {
   background-color: #ffffff;
   border-radius: 5px;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.15);
-  padding: 20px;
+  padding: 20px 15px;
   margin-top: 40px;
 }
 
