Incorporate the definition of .container directly onto <main>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,7 +73,7 @@
     </script>
     {% endif %}
 
-  <main class="container">
+  <main>
       {% if page.Character %}
       <h1>{{ page.Character }}</h1>
       {% if page.Subtitle %}<h1>({{ page.Subtitle }})</h1>{% endif %}
