Tidy up footer styling to get rid of the horizontal scroll bar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,10 +78,7 @@
 <div id=fader></div>
 <div id="popup"><div><img src="https://static-cdn.jtvnw.net/emoticons/v1/819883/3.0" alt="[placeholder]" role="presentation"><div id="popup-caption"></div></div></div>
 
-
-    <!-- Footer -->
-    <footer class="text-muted">
-            <div class="row justify-content-center">
+    <footer>
                 <p>
                     <a href="https://twitch.tv/DeviCat" aria-label="Twitch: DeviCat"><i class="fab fa-twitch fa-2x" title="Twitch: DeviCat"></i></a>
                     <a href="https://www.instagram.com/devicatoutlet/" aria-label="Instagram: DeviCatOutlet"><i class="fab fa-instagram fa-2x" title="Insta: DeviCatOutlet"></i></a>
@@ -90,11 +87,7 @@
                     <a href="https://discord.gg/devicat" aria-label="Discord: DeviCat"><i class="fab fa-discord fa-2x" title="Discord: DeviCat"></i></a>
                     <a href="https://www.patreon.com/devicatoutlet" aria-label="Patreon: DeviCatOutlet"><i class="fab fa-patreon fa-2x" title="Patreon: DeviCatOutlet"></i></a>
                 </p>
-            </div>
-            <div class="row justify-content-center">
-                    <p> &copy; DeviCat Outlet 2018 </p>
-            </div>
-    
+		<p>&copy; DeviCat Outlet 2018</p>
     </footer>
     <script defer src="https://use.fontawesome.com/releases/v5.0.3/js/all.js"></script>
 <script>
