Replace outdated border attribute with inline CSS

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
     <section class="jumbotron text-center parallax">
       <h2 class="sr-only">Embedded Twitch stream</h2>
       <div></div>
-      <div><iframe title="Watch DeviCat live!" src="https://player.twitch.tv?channel=devicat" allowfullscreen="" frameborder="0" allow="autoplay; fullscreen" width="768" height="432"></iframe></div>
+      <div><iframe title="Watch DeviCat live!" src="https://player.twitch.tv?channel=devicat" allowfullscreen="" style="border: 0" allow="autoplay; fullscreen" width="768" height="432"></iframe></div>
       <div>
         <a href="https://www.patreon.com/devicatoutlet"><img src="img/patreon.png" alt="Become a Patron"></a><br>
         <a href="https://discord.gg/devicat"><img src="img/discord.png" alt="Join the discussion"></a>
