--- a/css/main.css
+++ b/css/main.css
@@ -254,7 +254,11 @@ nav {
 nav img {
 	height: 42px;
 }
-nav ul {margin-left: auto;}
+nav a {
+	/* TODO: Improve color contrast (insufficient for a11y compliance) */
+	color: rgba(0,0,0,.5);
+	padding: .5rem;
+}
 .dropdown-menu a {
 	display: block;
 	padding: .25rem 1.5rem;
