Remove superfluous directives

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   <body class="{{ page.category | default: "devi" }}-cat">
 
     <!-- Navigation -->
-    <nav class="navbar-expand-md navbar-light">
+    <nav>
       <a href="/"><img src="img/mainbanner.png" alt="DeviCat"></a>
       <div style="flex-grow: 1"></div>
           {%- for dest in site.nav %}{%- for info in dest -%}
