Reinstate extra nesting level for dropdowns

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
             {%- if info[1].first -%}
               {%- comment %} It's an array of subpages (eg Characters) {% endcomment %}
 	      {%- assign url = name | downcase | replace: " ", "" %}
+	      <div>
               <a class="nav-dropdown {{active}}" href="{{ url }}" id="dropdown-{{ url }}" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ name }}{{current}}</a>
               <div class="nav-submenu" aria-labelledby="dropdown-{{ url }}">
 	        {%- for subdest in info[1] -%}
@@ -39,6 +40,7 @@
                   <a href="{{ url }}">{{ subdest }}</a>
 	        {%- endfor %}
               </div>
+	      </div>
             {%- else -%}
               {%- comment %} It's a single page (maybe with a specified URL) {% endcomment %}
               <a class="{{active}}" href="{{ url }}">{{ name }}{{ current }}</a>
