--- a/css/main.css
+++ b/css/main.css
@@ -275,8 +275,7 @@ logo will do the same. TODO: Do we even need a Home link in the nav? */
 	font-size: 0.75em;
 	margin-left: 0.25em;
 }
-.nav-submenu {display: none;}
-.nav-dropdown[aria-expanded="true"] ~ .nav-submenu {
+.nav-submenu {
 	display: flex;
 	position: absolute;
 	flex-direction: column;
@@ -286,6 +285,7 @@ logo will do the same. TODO: Do we even need a Home link in the nav? */
 	border: 1px solid black;
 	border-radius: 0.25em;
 }
+.nav-dropdown[aria-expanded="false"] ~ .nav-submenu {display: none;}
 .nav-submenu a {
 	color: #212529;
 	margin: 0.25em 1em;
