--- a/css/main.css
+++ b/css/main.css
@@ -249,7 +249,24 @@ nav {
 	display: flex; flex-flow: row nowrap;
 	align-items: center;
 	padding: .5rem 0;
+	min-height: 74px;
 }
+nav input {
+	/* The magical checkbox */
+	position: absolute;
+	width: 40px; height: 32px;
+	display: none;
+	opacity: 0;
+}
+#raptor_button {display: none;}
+#raptor_button div {
+	/* The three lines of the hamburger menu */
+	width: 33px; height: 4px;
+	background: #cdcdcd;
+	border-radius: 3px;
+	margin: 0 0 5px 3px;
+}
+nav input:checked ~ * {display: block}
 nav img {
 	height: 42px;
 }
@@ -260,9 +277,27 @@ nav a {
 }
 /* On smallish screens, hide the "Home" link, since clicking on the main
 logo will do the same. TODO: Do we even need a Home link in the nav? */
-@media (max-width: 860px) {nav a[href="/"]:not(:first-child) {display: none;}}
+@media (max-width: 860px) {nav a[href="/"]:not(.keep) {display: none;}}
 
-/* TODO: Below 725px of width, collapse to Raptor Mode */
+/* Below 725px of width, collapse to Raptor Mode */
+@media (max-width: 725px)
+{
+	nav {
+		flex-direction: column;
+		align-items: start;
+	}
+	nav input, #raptor_button {
+		display: block;
+		cursor: pointer;
+	}
+	nav > .keep {
+		display: block;
+	}
+	nav > a, nav > .nav-menucontainer {
+		display: none;
+	}
+}
+
 .dropdown-menu a {
 	display: block;
 	padding: .25rem 1.5rem;
