Center the hamburger menu vertically (give or take)

--- a/css/main.css
+++ b/css/main.css
@@ -290,6 +290,7 @@ logo will do the same. TODO: Do we even need a Home link in the nav? */
 		display: block;
 		cursor: pointer;
 		padding: 5px;
+		margin-top: 12px;
 	}
 	nav > .keep {
 		display: block;
