Use full word "Instagram" in hover text

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,7 +81,7 @@
 <footer>
   <p>
     <a href="https://twitch.tv/DeviCat" aria-label="Twitch: DeviCat"><i class="fab fa-twitch fa-2x" title="Twitch: DeviCat"></i></a>
-    <a href="https://www.instagram.com/devicatoutlet/" aria-label="Instagram: DeviCatOutlet"><i class="fab fa-instagram fa-2x" title="Insta: DeviCatOutlet"></i></a>
+    <a href="https://www.instagram.com/devicatoutlet/" aria-label="Instagram: DeviCatOutlet"><i class="fab fa-instagram fa-2x" title="Instagram: DeviCatOutlet"></i></a>
     <a href="https://twitter.com/DeviCatOutlet" aria-label="Twitter: DeviCatOutlet"><i class="fab fa-twitter fa-2x" title="Twitter: DeviCatOutlet"></i></a>
     <a href="https://www.youtube.com/DeviCatTV" aria-label="Youtube: DeviCatTV"><i class="fab fa-youtube fa-2x" title="Youtube: DeviCatTV"></i></a>
     <a href="https://discord.gg/devicat" aria-label="Discord: DeviCat"><i class="fab fa-discord fa-2x" title="Discord: DeviCat"></i></a>
