--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -79,6 +79,7 @@
 
 <footer>
   <p>
+    <!-- TODO: Replace Font-Awesome icons with actual logos in their correct colors -->
     <a href="https://twitch.tv/DeviCat" aria-label="Twitch: DeviCat"><i class="fab fa-twitch fa-2x" title="Twitch: DeviCat"></i></a>
     <a href="https://www.instagram.com/devicatoutlet/" aria-label="Instagram: DeviCatOutlet"><i class="fab fa-instagram fa-2x" title="Instagram: DeviCatOutlet"></i></a>
     <a href="https://twitter.com/DeviCatOutlet" aria-label="Twitter: DeviCatOutlet"><i class="fab fa-twitter fa-2x" title="Twitter: DeviCatOutlet"></i></a>
