Per TODO, replace FontAwesome icons with actual legit icons from the platforms

--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,12 @@ footer {
   background: #E3E3E3;
   padding: 12px;
 }
+footer svg, footer img {
+	display: inline-block;
+	height: 32px;
+	margin: 0 8px; /* Comply with Instagram's TOS by having half an icon of gap */
+	vertical-align: baseline; /* override _reboot.scss from bootstrap */
+}
 
 ul.layout li {
 	list-style: none;
