--- a/css/main.css
+++ b/css/main.css
@@ -174,6 +174,7 @@ h1#about, h1#home {
 /* Some large SVGs get 'marked small' with asterisks - they're basically emoji. */
 em img {
 	width: 1.5em;
+	display: inline-block;
 }
 
 #goals ~ ul {
