--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
           {%- assign url = dest | downcase | replace: " ", "" -%}
         {%- endif -%}
         {% assign active = "" %}{% assign current = "" %}
-        {%- if page.title == name %}{% assign active = " active" %}{% assign current = '<span class="sr-only">(current)</span>' %}{% endif %}
+        {%- if page.title == name %}{% assign active = " active" %}{% assign current = '<span class="screenreader">(current)</span>' %}{% endif %}
         {%- if info[1].first -%}
           {%- comment %} It's an array of subpages (eg Characters) {% endcomment %}
           {%- assign url = name | downcase | replace: " ", "" %}
@@ -52,7 +52,7 @@
     </nav>
     {% if page.title == "Home" %}
     <section class="jumbotron">
-      <h2 class="sr-only">Embedded Twitch stream</h2>
+      <h2 class="screenreader">Embedded Twitch stream</h2>
       <div></div>
       <div><iframe title="Watch DeviCat live!" src="https://player.twitch.tv?channel=devicat" allowfullscreen="" style="border: 0" allow="autoplay; fullscreen" width="768" height="432"></iframe></div>
       <div>
