--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 *, ::after, ::before {
-	/* box-sizing: border-box; */
+	box-sizing: border-box;
 }
 
 /* Site-wide global styling */
@@ -26,10 +26,12 @@ a {
 	font-weight: bold;
 }
 
+ul {margin-top: 0;}
+
 h1, h2, h3, h4 {
 	text-align: center;
 	font-weight: 500; /* Medium, rather than full bold. Is this coffee or text? */
-	margin-bottom: .5rem;
+	margin: 0 0 .5rem 0;
 	line-height: 1.2;
 }
 
