--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,7 @@ h1 {font-size: 2.5em;}
 h2 {font-size: 2em;}
 /* If there are two adjacent head-ones, the second is a sort of subheading. Size it like a head-three. */
 h3, h1~h1 {font-size: 1.75em;}
+h4 {font-size: 1.5em;}
 
 h2:before, h2:after {
 	display: inline-block;
