--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,7 @@ div ul {
 	height: 100%;
 	display: flex;
 	justify-content: space-around;
+	padding: 4rem 2rem;
 }
 
 /* Character pages have vertically-aligned images */
