Reinstate left-align style

--- a/css/main.css
+++ b/css/main.css
@@ -223,6 +223,7 @@ ul.cards li {
 #contact ~ ul a {
 	font-weight: bold;
 }
+.left-align img {margin: 0;} /* Contact page only */
 
 .email:before, .email:after {
 	display: inline-block;
