Change Jumbotron Background img

--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ div ul {
 
 /* Home only */
 .jumbotron {
-	background-image: url("../img/TakeRootAndDreamBanner.png");
+	background-image: url("../img/Sprinkle_Banner.png");
 	background-attachment: fixed;
 	background-position: 0% 0%;
 	background-repeat: no-repeat;
