--- a/css/main.css
+++ b/css/main.css
@@ -295,7 +295,7 @@ nav > a, nav > .nav-menucontainer {
 		display: block;
 		position: absolute;
 		left: calc(50% - 77px / 2);
-		margin-bottom: -3rem
+		margin-bottom: -3rem;
 	}
 	nav > a, nav > .nav-menucontainer {
 		display: none;
