--- a/css/main.css
+++ b/css/main.css
@@ -278,6 +278,9 @@ nav a {
 nav > a, nav > .nav-menucontainer {
 	padding: .5rem;
 }
+nav > .keep {
+	margin-bottom: -3rem; /* Let the Home button drift below its frame a bit */
+}
 /* Below 822px of width, collapse to Raptor Mode */
 @media (max-width: 822px)
 {
@@ -295,7 +298,6 @@ nav > a, nav > .nav-menucontainer {
 		display: block;
 		position: absolute;
 		left: calc(50% - 77px / 2);
-		margin-bottom: -3rem;
 	}
 	nav > a, nav > .nav-menucontainer {
 		display: none;
