--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
             <a class="nav-dropdown {{active}}" href="{{ url }}" id="dropdown-{{ url }}" role="button" aria-haspopup="true" aria-expanded="false">{{ name }}{{current}}</a>
             <div class="nav-submenu" aria-labelledby="dropdown-{{ url }}">
               {%- for subdest in info[1] -%}
-                {%- assign url = subdest | downcase | replace: " ", "" | replace: ",", "-" %}
+                {%- assign url = subdest | downcase | replace: " ", "" | replace: "->", "" | replace: ",", "-" %}
                 <a href="{{ url }}">{{ subdest }}</a>
               {%- endfor %}
             </div>
